[package]
name = "JsonPathCalculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
ijson = "0.1.3"

[lib]
name = "jsonpath_calculator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]