[package]
name = "jsonpath_rs"
version = "0.1.0"
authors = ["Meir Shpilraien <meir@redis.com>"]
edition = "2021"
description = "A JsonPath engine written in Rust"
license = "Server Side Public License"
license-file = "LICENSE"
repository = "https://github.com/RedisJSON/jsonpath_rs"
readme = "README.md"
keywords = ["json", "jsonpath", "query"]
categories = ["database", "api-bindings", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
ijson = "0.1.3"

[lib]
name = "jsonpath_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
